# learnopengl

./: .gitignore  CMakeLists.txt  main.cpp
dependencies/headers/: glad.h
dependencies/src/: glad.c
src/: Shader.cpp  Shader.h  main.cpp  shader.cpp  shader.h
src/shaders/: shader.frag  shader.vert  shader2.frag
